data/derived/fa15/progs/unify/prog4072.ml.out
Characters 25-26:
  let _ = eval (Neg(VarX), 1, 0);;
                           ^
Error: This expression has type int but an expression was expected of type
         float
